--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gulp-open": "^2.0.0",
     "gulp-watch": "^4.3.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "run-sequence": "^1.2.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
