--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-watch": "^4.3.11"
   },
   "devDependencies": {
+    "gulp-exec": "^2.1.3",
     "run-sequence": "^1.2.2"
   },
   "scripts": {
