--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gulp-watch": "^4.3.11"
   },
   "devDependencies": {
+    "async": "^2.4.1",
+    "gulp-changed": "^3.1.0",
     "gulp-exec": "^2.1.3",
     "run-sequence": "^1.2.2"
   },
