--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "async": "^2.4.1",
     "gulp-changed": "^3.1.0",
     "gulp-exec": "^2.1.3",
+    "gulp-file-include": "^1.1.0",
     "run-sequence": "^1.2.2"
   },
   "scripts": {
