--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-changed": "^3.1.0",
     "gulp-exec": "^2.1.3",
     "gulp-file-include": "^1.1.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "xlsx": "^0.10.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
