--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-file-include": "^1.1.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-less": "^3.3.0",
+    "jsontoxml": "0.0.11",
     "run-sequence": "^1.2.2",
     "xlsx": "^0.10.5"
   },
