--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-less": "^3.3.0",
     "jsontoxml": "0.0.11",
+    "mkdirp": "^0.5.1",
     "run-sequence": "^1.2.2",
     "xlsx": "^0.10.5"
   },
