--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@ node_modules
 build
 .idea
 .publish
+data-analysis-tab.json
+data-processing-tab.json
+help-tab.json
+petrophysics-tab.json
+project-tab.json
+source/html/ribbon-block/data-analysis-tab/
+source/html/ribbon-block/data-processing-tab/
+source/html/ribbon-block/help-tab/
+source/html/ribbon-block/petrophysics-tab/
+source/html/ribbon-block/project-tab/
+source/html/ribbon-block/well-tab/
+well-tab.json
