track-properties-dialog: markup updating

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "angular-bootstrap-colorpicker": "^3.0.31",
     "del": "^2.2.2",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
