--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gulp-less": "^3.3.0",
     "jsontoxml": "0.0.11",
     "run-sequence": "^1.2.2",
-    "xlsx": "^0.10.5"
+    "xlsx": "^0.10.5",
+    "mkdirp": "^0.5.1"
   },
   "scripts": {},
   "repository": {
