--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-inject": "^4.2.0",
     "gulp-open": "^2.0.0",
+    "gulp-rsync": "0.0.8",
     "gulp-watch": "^4.3.11",
     "jsontoxml": "0.0.11"
   },
