--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/js/index.js",
   "dependencies": {
     "angular-bootstrap-colorpicker": "^3.0.31",
+    "bootstrap-colorpicker": "^2.5.1",
     "del": "^2.2.2",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
