--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "../index.js",
   "dependencies": {
     "angular-bootstrap-colorpicker": "^3.0.31",
+    "angular-multiple-select": "^1.1.2",
     "bootstrap-colorpicker": "^2.5.1",
     "del": "^2.2.2",
     "glob": "^7.1.2",
