--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-inject": "^4.2.0",
     "gulp-open": "^2.0.0",
     "gulp-rsync": "0.0.8",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "query-string": "^5.0.1"
   },
   "devDependencies": {
     "async": "^2.4.1",
@@ -24,11 +25,11 @@
     "gulp-exec": "^2.1.3",
     "gulp-file-include": "^1.1.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-less": "^3.3.0",
+    "gulp-less": "^3.3.2",
     "jsontoxml": "0.0.11",
+    "mkdirp": "^0.5.1",
     "run-sequence": "^1.2.2",
-    "xlsx": "^0.10.5",
-    "mkdirp": "^0.5.1"
+    "xlsx": "^0.10.5"
   },
   "scripts": {},
   "repository": {
