--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-open": "^2.0.0",
     "gulp-rsync": "0.0.8",
     "gulp-watch": "^4.3.11",
+    "ng-infinite-scroll": "^1.3.0",
     "query-string": "^5.0.1"
   },
   "devDependencies": {
