--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "async": "^2.4.1",
+    "browser-sync": "^2.23.3",
     "gulp-angular-embed-templates": "^2.3.0",
     "gulp-changed": "^3.1.0",
     "gulp-exec": "^2.1.3",
