--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angular-multiple-select": "^1.1.2",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "bootstrap-colorpicker": "^2.5.1",
+    "d3plus": "^2.0.0-alpha.17",
     "del": "^2.2.2",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
