--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "angular-multiple-select": "^1.1.2",
     "angularjs-dropdown-multiselect": "^2.0.0-beta.10",
     "bootstrap-colorpicker": "^2.5.1",
+    "bpmn-engine": "^4.2.0",
+    "bpmn-js": "^0.31.0",
     "d3plus": "^2.0.0-alpha.17",
     "del": "^2.2.2",
     "glob": "^7.1.2",
